@@ -11,7 +11,6 @@ wpakey_t *wpak, *wpak2;
 memset (&hccapx, 0, sizeof(hccapx_t));
 hccapx.signature = HCCAPX_SIGNATURE;
 hccapx.version   = HCCAPX_VERSION;
-
 hccapx.message_pair = 0x80;
 if((zeiger->keyinfo_ap == 1) && (zeiger->keyinfo_sta == 4))
 	{
@@ -73,6 +72,32 @@ hccapx.version		= byte_swap_32(hccapx.version);
 hccapx.eapol_len	= byte_swap_16(hccapx.eapol_len);
 #endif
 fwrite (&hccapx, sizeof(hccapx_t), 1, fho);
+return;
+}
+/*===========================================================================*/
+void writehccaprecord(hcxl_t *zeiger, FILE *fho)
+{
+hccap_t hccap;
+wpakey_t *wpak, *wpak2;
+
+memset (&hccap, 0, sizeof(hccap_t));
+wpak = (wpakey_t*)(zeiger->eapol +EAPAUTH_SIZE);
+memcpy(hccap.essid, zeiger->essid, 32);
+memcpy(hccap.mac1, zeiger->mac_ap, 6);
+memcpy(hccap.mac2, zeiger->mac_sta, 6);
+memcpy(hccap.nonce1, wpak->nonce, 32);
+memcpy(hccap.nonce2, zeiger->nonce, 32);
+
+hccap.eapol_size = zeiger->authlen;
+memcpy(&hccap.eapol, zeiger->eapol, zeiger->authlen);
+memcpy(&hccap.keymic, wpak->keymic, 16);
+wpak2 = (wpakey_t*)(hccap.eapol +EAPAUTH_SIZE);
+memset(wpak2->keymic, 0, 16);
+hccap.keyver = ntohs(wpak->keyinfo) & WPA_KEY_INFO_TYPE_MASK;
+ #ifdef BIG_ENDIAN_HOST
+hccap.eapolsize	= byte_swap_16(hccap.eapolsize);
+#endif
+fwrite (&hccap, sizeof(hccap_t), 1, fho);
 return;
 }
 /*===========================================================================*/
